--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bai 2</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <div style="text-align: center" class="tool">
+        <input type="text" id="hex">
+        <input type="color" id="color">
+        <button type="button" onclick="ChangeColor()" class="changecolor">ChangeColor</button>    
+    </div>
 </body>
+<script src="index.js"> </script>
 </html>
